src/objects/Field_Tag__c.object
<CustomObject>
    <description>TMN General - Used to mark up VF pages often in partnership with field sets</description>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Header_Text__c</fullName>
        <label>Header Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Help_Long__c</fullName>
        <label>Help Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Style_Class__c</fullName>
        <label>Style Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Style_Inline__c</fullName>
        <label>Style Inline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Default_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Label</label>
        <type>Checkbox</type>
    </fields>
    <label>Field Tag</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Header__c</columns>
        <columns>Header_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Tags</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>